; ModuleID = '/home/carl/AnghaBench/the_silver_searcher/src/extr_search.c_check_symloop_enter.c'
source_filename = "/home/carl/AnghaBench/the_silver_searcher/src/extr_search.c_check_symloop_enter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32 }
%struct.stat = type { i32, i32 }
%struct.TYPE_9__ = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"Error stat()ing: %s\00", align 1
@SYMLOOP_ERROR = common dso_local global i32 0, align 4
@hh = common dso_local global i32 0, align 4
@symhash = common dso_local global i32 0, align 4
@SYMLOOP_LOOP = common dso_local global i32 0, align 4
@key = common dso_local global i32 0, align 4
@SYMLOOP_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.TYPE_10__*)* @check_symloop_enter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_symloop_enter(i8* %0, %struct.TYPE_10__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca %struct.stat, align 4
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca %struct.TYPE_9__*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %5, align 8
  store %struct.TYPE_9__* null, %struct.TYPE_9__** %7, align 8
  store %struct.TYPE_9__* null, %struct.TYPE_9__** %8, align 8
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %11 = call i32 @memset(%struct.TYPE_10__* %10, i32 0, i32 8)
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %12, i32 0, i32 1
  store i32 0, i32* %13, align 4
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %14, i32 0, i32 0
  store i32 0, i32* %15, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @stat(i8* %16, %struct.stat* %6)
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* %9, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %2
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 @log_err(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %21)
  %23 = load i32, i32* @SYMLOOP_ERROR, align 4
  store i32 %23, i32* %3, align 4
  br label %55

24:                                               ; preds = %2
  %25 = getelementptr inbounds %struct.stat, %struct.stat* %6, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 4
  %29 = getelementptr inbounds %struct.stat, %struct.stat* %6, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 4
  %33 = load i32, i32* @hh, align 4
  %34 = load i32, i32* @symhash, align 4
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %36 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %37 = call i32 @HASH_FIND(i32 %33, i32 %34, %struct.TYPE_10__* %35, i32 8, %struct.TYPE_9__* %36)
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %39 = icmp ne %struct.TYPE_9__* %38, null
  br i1 %39, label %40, label %42

40:                                               ; preds = %24
  %41 = load i32, i32* @SYMLOOP_LOOP, align 4
  store i32 %41, i32* %3, align 4
  br label %55

42:                                               ; preds = %24
  %43 = call i64 @ag_malloc(i32 4)
  %44 = inttoptr i64 %43 to %struct.TYPE_9__*
  store %struct.TYPE_9__* %44, %struct.TYPE_9__** %8, align 8
  %45 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %46 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %45, i32 0, i32 0
  %47 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %48 = call i32 @memcpy(i32* %46, %struct.TYPE_10__* %47, i32 8)
  %49 = load i32, i32* @hh, align 4
  %50 = load i32, i32* @symhash, align 4
  %51 = load i32, i32* @key, align 4
  %52 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %53 = call i32 @HASH_ADD(i32 %49, i32 %50, i32 %51, i32 8, %struct.TYPE_9__* %52)
  %54 = load i32, i32* @SYMLOOP_OK, align 4
  store i32 %54, i32* %3, align 4
  br label %55

55:                                               ; preds = %42, %40, %20
  %56 = load i32, i32* %3, align 4
  ret i32 %56
}

declare dso_local i32 @memset(%struct.TYPE_10__*, i32, i32) #1

declare dso_local i32 @stat(i8*, %struct.stat*) #1

declare dso_local i32 @log_err(i8*, i8*) #1

declare dso_local i32 @HASH_FIND(i32, i32, %struct.TYPE_10__*, i32, %struct.TYPE_9__*) #1

declare dso_local i64 @ag_malloc(i32) #1

declare dso_local i32 @memcpy(i32*, %struct.TYPE_10__*, i32) #1

declare dso_local i32 @HASH_ADD(i32, i32, i32, i32, %struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
